2004-02-10  Dennis Smit  <ds@nerds-incorporated.org>

	* modemlights.h: Added connect_dialog and run_dialog entries
	to the mldata structure.

	* modemlights.c (dial_cb): Converted to be multihead aware
	and cleanups.

	(execute_command): Converted to be multihead aware and
	cleanups.

	(run_response_cb): Added to response on the message_dialog
	within execute_command and changed it to be event driven
	so we have more control over it, and it doesn't annoy
	between instances.
	
2004-02-08  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (CLEANFILES): Add .server and .server.in here.
        (#132071, Padraig O'Briain)

2004-02-05  Muktha  <muktha.narayan@wipro.com>

	* modemlights.c: Add accessible name. Fixes bug #128260.

2004-01-31  Archana Shah  <archana.shah@wipro.com>

	* modemlights.h: Added a member in structure MLData for
	about dialog.
	* modemlights.c: (modemlights_applet_fill): Initialized about_dialog
	with NULL.
	(about_cb): Changed to use member field about_dialog instead of
	static variable about.
	(destroy_cb): Destroys about_dialog when the applet is removed.
	Fixes bug #132289

2004-01-29  Chee Bin HOH  <cbhoh@gnome.org>

	* modemlights.c:
	* properties.c: fix bug #132832 for displaying online help.
          
2004-01-27  Chee Bin HOH  <cbhoh@gnome.org>

	* docs/C/modemlights-C.omf:
	* docs/C/modemlights.xml: Update docs for 2.6.
	
	* docs/C/figures/modemlights_applet_advanced.png:
	* docs/C/figures/modemlights_applet_general.png: New screenshots
	  for 2.6.

2004-01-18  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (install-data-local): builddir != srcdir fix.

2003-12-15  Olli Helenius  <liff@iki.fi>

	* modemlights.h
	Remove usage of deprecated APIs: GtkPixmap -> GtkImage,
	g_file_exists -> g_file_test and GTK_SIGNAL_FUNC ->
	G_CALLBACK. Also update some GDK functions to non-deprecated
	versions.

	* properties.c: Change GnomeColorPicker to GtkColorButton and
	convert gtk_entry_new_with_max_length to _new and _set_max_length.