@@ -1,3 +1,9 @@
+2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>
+
+	* modemlights.c (about_cb): Set the screen right when the user
+	requests the about dialog and it's already there but not on the
+	right screen.
+
 2004-02-10  Dennis Smit  <ds@nerds-incorporated.org>
 
 	* modemlights.h: Added connect_dialog and run_dialog entries
